# COEN244

./: .gitignore  1_b_TicTacToe1D.cpp  CLI.cpp  CMakeLists.txt  COEN244.dockerfile  Makefile  binary_math.cpp  brewtasks.sh  complex_n.cpp  getenvc.cpp  macros.cpp  main.cpp  main1.cpp  main2.cpp  main3  main3.cpp  mswordREADER.cpp  polymorphism.cpp  regex.cpp  streams.cpp  swift.cpp  templates.cpp  tutorial.docx
.github/workflows/: cmake-multi-platform.yml
A3/: Board.cpp  Board.h  CMakeLists.txt  Makefile  Othello  Othello.cpp  Othello.h  Player.cpp  Player.h  Position.cpp  Position.h  Test  cmake_install.cmake  main.cpp  test.cpp  testfile.cpp
A4/: A4.cpp  AllExceptions.cpp  AllExceptions.h  CMakeLists.txt  TA.cpp  TA.h  TATA.txt  TAs.txt  TAs_backup.txt  Utilities.h  basic_exceptions.cpp
AAA/: CMakeLists.txt  Game.cpp  Nim.cpp  Nim.h  Nim_Game.cpp  Nim_Game_1.cpp  nimToWin.cpp
assignment1/: A1.cpp  CMakeLists.txt  Makefile  TA.cpp  TA.h  TAs-backup.txt  TAs.txt  cmake_install.cmake
headers/: Shape.cpp  Shape.h
std/: CMakeLists.txt  memset.cpp
